--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.0.0",
     "recharts": "^1.8.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.1.0"
   },
   "scripts": {
