--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://yourhomepage.com"
+  "homepage": "https://liamfosterlff.github.io/covid19-visualization/"
 }
