--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^7.1.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "d3": "^5.15.1",
     "gh-pages": "^3.2.3",
     "rainbowvis.js": "^1.0.1",
@@ -17,7 +22,8 @@
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
