--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rainbowvis.js": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.0.0",
     "recharts": "^1.8.5",
